--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "matter-js": "^0.14.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-game-engine": "^1.1.1"
+    "react-native-game-engine": "^1.1.1",
+    "react-native-svg": "^11.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
