--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "matter-js": "^0.14.2",
     "react": "16.9.0",
+    "react-motion": "^0.5.2",
     "react-native": "0.61.5",
+    "react-native-animatable": "^1.3.3",
     "react-native-game-engine": "^1.1.1",
     "react-native-svg": "^11.0.1"
   },
