--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "bunny": "^1.0.1",
+    "gl-mat4": "^1.2.0",
+    "gl-react": "^4.0.1",
+    "gl-react-native": "^4.0.1",
     "matter-js": "^0.14.2",
     "react": "16.9.0",
     "react-motion": "^0.5.2",
     "react-native": "0.61.5",
     "react-native-animatable": "^1.3.3",
     "react-native-game-engine": "^1.1.1",
-    "react-native-svg": "^11.0.1"
+    "react-native-svg": "^11.0.1",
+    "react-native-unimodules": "^0.7.0",
+    "regl": "^1.3.13"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
