--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gl-mat4": "^1.2.0",
     "gl-react": "^4.0.1",
     "gl-react-native": "^4.0.1",
+    "matter-attractors": "^0.1.6",
     "matter-js": "^0.14.2",
     "react": "16.9.0",
     "react-motion": "^0.5.2",
